# ffit

base_local_planner/src/: odometry_helper_ros.cpp
cartographer_fetch/cartographer_fetch/configuration_files/: fetch_localization.lua
cmvision/launch/: cmvision.launch  cmvision_fetch.launch
cmvision/src/: cmvision_color_blob_finder.cpp
costmap_2d/src/: costmap_2d_ros.cpp
fetch_gazebo_world_grasping/: CMakeLists.txt  package.xml
fetch_gazebo_world_grasping/config/: default_controllers.yaml  detection.table.ros.ork
fetch_gazebo_world_grasping/launch/: deps.launch  fetch_moveit_sensor_manager.launch.xml  moveit_config_move_group.launch  moveit_config_sensor_manager.launch.xml  moveit_config_sensors.yaml  test1.launch
fetch_gazebo_world_grasping/launch/include/: fetch.launch.xml
fetch_gazebo_world_grasping/models/cafe_table_metric/meshes/: cafe_table.dae  cafe_table.stl
fetch_gazebo_world_grasping/models/rect_bin_green/: model.config  model.sdf
fetch_gazebo_world_grasping/models/rect_bin_green/meshes/: dropbox.dae  dropbox.stl
fetch_gazebo_world_grasping/models/rect_bin_orange/: model.config  model.sdf
fetch_gazebo_world_grasping/rviz/: fetch_robot_indigo.rviz
fetch_gazebo_world_grasping/worlds/: pick_and_place.sdf  world1.sdf
fetchit_challenge/: CMakeLists.txt
fetchit_challenge/urdf/: shunk_machine.urdf
fetchpy/: CMakeLists.txt  package.xml  setup.py
fetchpy/scripts/: console.py
fetchpy/src/fetchpy/: __init__.py  fetch.py  fetch_arm.py  fetch_base.py  fetch_gripper.py  fetch_head.py  fetch_torso.py  joint_state_listener.py  world_gazebo.py
fido_fetchit/: CMakeLists.txt  package.xml
fido_fetchit/launch/: fetch_costmap_registration.launch  fetch_localization_amcl_real_robot.launch  fetch_localization_amcl_sim.launch  fetch_moveit.launch  fetch_snap_map_icp.launch  fetch_view_urdf.launch
fido_fetchit/maps/gazebo_sim_map1/: gazebo_sim_map1.pgm  gazebo_sim_map1.yaml
fido_fetchit/maps/real_robot_map1/: real_robot_map1.pgm  real_robot_map1.yaml
fido_fetchit/rviz/: fetch_build_map.rviz  fetch_debug_odometry.rviz  fetch_localization_amcl.rviz  fetch_pick_place_demo.rviz  fetch_view_rosbag.rviz  fetch_view_urdf.rviz  view_asus_xtion.rviz
pointcloud_snapshotter/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
pointcloud_snapshotter/launch/: fetch_pointcloud_snapshotter.launch  pointcloud_snapshotter.launch~  rviz.launch  trigger_collision_map.launch
pointcloud_snapshotter/rviz/: snapshotter.vcg
pointcloud_snapshotter/src/: pointcloud_snapshotter.cpp  trigger_collision_map.cpp
reem_head_scan_action/: CMakeLists.txt  README.md  manifest.xml
reem_head_scan_action/launch/: scan_snapshot_action_node.launch
reem_head_scan_action/src/: scan_snapshot_action_node.cpp
reem_head_scan_action/src/test/: scan_table.cpp
reem_object_recognition/: CMakeLists.txt  README.md  package.xml
reem_object_recognition/config/tabletop/: detection.clusters.ros.ork.fetch  detection.clusters.ros.ork.fetch~  detection.object.ros.ork.fetch  detection.object.ros.ork.fetch~  detection.table.ros.ork.fetch  detection.table.ros.ork.fetch~
reem_object_recognition/rviz/: tabletop.rviz
snap_map_icp/src/: SnapMapICP.cpp
