<?xml version="1.0"?>
<package format="2">
  <name>fido_fetchit</name>

  <version>0.1.0</version>
  <description>todo</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license> <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <!-- <url type="website">http://wiki.ros.org/fido_fetchit</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>
  <!-- exec_depend>gmapping</exec_depend --> <!-- Missing rosdep -->

  <export>
  </export>

</package>
